# github_notifier

./: .gitignore  .settings.toml.example  Cargo.toml  README.md
src/: main.rs  message_builder.rs  mod.rs  settings.rs
src/github/: pulls.rs
src/slack/message/: mod.rs  model.rs  send.rs
