[package]
name = "github_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-rt = "2.9"
actix-web = "4.5"
actix-web-actors = "4.3"
octocrab = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version="*", features=["serde"] }
